--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="author" content="Philip McHugh" />
+  <meta
+    name="description"
+    content="This webapp demonstrates how difficult it is to win various lotto prizes using brute force." />
+
+
   <title>Lotto is Hard</title>
   <link rel="icon" href="./favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
